--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.4.0",
+    "body-scroll-lock": "^2.6.4",
     "classnames": "^2.2.6",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-image": "^2.2.0",
     "react-portal": "^4.2.0",
     "react-scripts": "3.1.1",
     "reset-css": "^4.0.1"
