--- a/package.json
+++ b/package.json
@@ -3,23 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.4.0",
-    "body-scroll-lock": "^2.6.4",
-    "classnames": "^2.2.6",
-    "node-sass": "^4.12.0",
-    "prop-types": "^15.7.2",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-image": "^2.2.0",
-    "react-portal": "^4.2.0",
-    "react-scripts": "3.1.1",
-    "reset-css": "^4.0.1"
+    "body-scroll-lock": "~2.6.4",
+    "classnames": "~2.2.6",
+    "lodash.get": "~4.4.2",
+    "prop-types": "~15.7.2",
+    "react": "~16.9.0",
+    "react-dom": "~16.9.0",
+    "react-portal": "~4.2.0",
+    "react-router-dom": "~5.0.1",
+    "react-scripts": "~3.1.1",
+    "reset-css": "~4.0.1",
+    "whatwg-fetch": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "npm run test && react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "npm run build && firebase deploy"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -37,7 +38,11 @@
     ]
   },
   "devDependencies": {
-    "lodash.get": "^4.4.2",
-    "react-router-dom": "^5.0.1"
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "nock": "^11.3.3",
+    "node-sass": "~4.12.0",
+    "react-hooks-testing-library": "^0.6.0",
+    "react-test-renderer": "^16.9.0"
   }
 }
