--- a/package.json
+++ b/package.json
@@ -3,17 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "body-scroll-lock": "~2.6.4",
     "classnames": "~2.2.6",
     "lodash.get": "~4.4.2",
+    "no-scroll": "~2.1.1",
     "prop-types": "~15.7.2",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-portal": "~4.2.0",
     "react-router-dom": "~5.0.1",
     "react-scripts": "~3.1.1",
-    "reset-css": "~4.0.1",
-    "whatwg-fetch": "^3.0.0"
+    "reset-css": "~4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -38,11 +37,12 @@
     ]
   },
   "devDependencies": {
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.14.0",
-    "nock": "^11.3.3",
+    "enzyme": "~3.10.0",
+    "enzyme-adapter-react-16": "~1.14.0",
+    "fetch-mock": "~7.3.9",
+    "node-fetch": "~2.6.0",
     "node-sass": "~4.12.0",
-    "react-hooks-testing-library": "^0.6.0",
-    "react-test-renderer": "^16.9.0"
+    "react-hooks-testing-library": "~0.6.0",
+    "whatwg-fetch": "^3.0.0"
   }
 }
